fixed blog article alignment for desktop

--- a/src/components/BlogArticles/BlogArticles.css
+++ b/src/components/BlogArticles/BlogArticles.css
@@ -26,12 +26,14 @@
   flex-direction: column;
   width: 25vw;
   height: auto;
+  /* margin: 15px 0 15px 0; */
 }
 
 .art-card-text {
   font-size: 2em;
   font-weight: 500;
   color: #2f2e41;
+  margin: 15px 20px 15px 20px;
 }
 
 .art-card-text:hover {
